Fixes #291, Initial gap between images removed, image display made similar to market leader

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -145,7 +145,8 @@ a {
 }
 
 .grid {
-  padding-left: 80px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .responsive-image {
